{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 15,
  "lineage": "c8bee614-3d90-c5e4-df63-6888b00699fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddde3822149b6a0a",
            "domain": "vpc",
            "id": "eipalloc-0ddde3822149b6a0a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-218-248-197.compute-1.amazonaws.com",
            "public_ip": "44.218.248.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:internet-gateway/igw-06f2fbc4c6dfc741f",
            "id": "igw-06f2fbc4c6dfc741f",
            "owner_id": "258568889584",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "vpc_id": "vpc-00c4ec8a954b9d509"
          },
          "dependencies": [
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddde3822149b6a0a",
            "association_id": "eipassoc-0eda90f69c895167a",
            "connectivity_type": "public",
            "id": "nat-009a4c614fc7041e3",
            "network_interface_id": "eni-0b4b73c95f17e9183",
            "private_ip": "10.0.3.66",
            "public_ip": "44.218.248.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca6871f9db7dc31f",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            }
          },
          "dependencies": [
            "aws_eip.this-eip",
            "aws_subnet.this-subnet-public01",
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this-route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff3f901ae638a5081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-009a4c614fc7041e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff3f901ae638a508",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this-eip",
            "aws_nat_gateway.this-nat",
            "aws_route_table.this-RT-private",
            "aws_subnet.this-subnet-public01",
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this-route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06f2fbc4c6dfc741f",
            "id": "r-rtb-00cf677de6c31c8d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00cf677de6c31c8d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this-igw",
            "aws_route_table.this-RT-public",
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-RT-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:route-table/rtb-0ff3f901ae638a508",
            "id": "rtb-0ff3f901ae638a508",
            "owner_id": "258568889584",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c4ec8a954b9d509"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-RT-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:route-table/rtb-00cf677de6c31c8d8",
            "id": "rtb-00cf677de6c31c8d8",
            "owner_id": "258568889584",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c4ec8a954b9d509"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this-RTAS-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79eb9005d62996a",
            "route_table_id": "rtb-0ff3f901ae638a508",
            "subnet_id": "subnet-0b9adb3bbeabbdcc0"
          },
          "dependencies": [
            "aws_route_table.this-RT-private",
            "aws_subnet.this-subnet-private01",
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this-RTAS-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015d571acafed01a4",
            "route_table_id": "rtb-00cf677de6c31c8d8",
            "subnet_id": "subnet-0ca6871f9db7dc31f"
          },
          "dependencies": [
            "aws_route_table.this-RT-public",
            "aws_subnet.this-subnet-public01",
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this-subnet-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:subnet/subnet-0b9adb3bbeabbdcc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9adb3bbeabbdcc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258568889584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "vpc_id": "vpc-00c4ec8a954b9d509"
          },
          "dependencies": [
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this-subnet-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:subnet/subnet-0c49182b49def9630",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c49182b49def9630",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258568889584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "vpc_id": "vpc-00c4ec8a954b9d509"
          },
          "dependencies": [
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this-subnet-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:subnet/subnet-0ca6871f9db7dc31f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca6871f9db7dc31f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258568889584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "vpc_id": "vpc-00c4ec8a954b9d509"
          },
          "dependencies": [
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this-subnet-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:subnet/subnet-010e2eaa25a00bfe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010e2eaa25a00bfe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258568889584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            },
            "vpc_id": "vpc-00c4ec8a954b9d509"
          },
          "dependencies": [
            "aws_vpc.this-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258568889584:vpc/vpc-00c4ec8a954b9d509",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6883f60896e3c24",
            "default_route_table_id": "rtb-032a43f1c3b9d090b",
            "default_security_group_id": "sg-031415b6a9b07791f",
            "dhcp_options_id": "dopt-042f5c39a2cbc8400",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c4ec8a954b9d509",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032a43f1c3b9d090b",
            "owner_id": "258568889584",
            "tags": {
              "user": "vpc_USER"
            },
            "tags_all": {
              "user": "vpc_USER"
            }
          }
        }
      ]
    }
  ]
}